--- a/terragrunt/live/global_values.yaml
+++ b/terragrunt/live/global_values.yaml
@@ -1,14 +1,14 @@
 ---
 provider: aws
 # Your AWS Account ID
-aws_account_id: 161285725140
+aws_account_id: XX210XX08XXX
 
 # Prefix to be added to created resources
-prefix: pio-teks
+prefix: infra-teks
 
 # AWS S3 bucket region where Terraform will store state
-tf_state_bucket_region: eu-west-1
+tf_state_bucket_region: us-west-1
 
 # Github username or organization, this can be used by Flux2 to auto configure
 # Github bootstrap
-github_owner: particuleio
+github_owner: mameshini
